# diaglint

./: Cargo.toml
assets/bad/: E1017.json
src/: json.rs  lib.rs  lint.rs  main.rs  parse.rs  report.rs
src/rules/: capitalized_messages.rs  illegals.rs  mod.rs  punctuated_endings.rs
