[package]
name = "diaglint"
version = "0.1.0"
edition = "2018"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
codespan-reporting = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
