[package]
name = "diaglint"
version = "0.1.2"
authors = ["Hirochika Matsumoto <git@hkmatsumoto.com>"]
description = "A linter for Rust diagnostics"
edition = "2018"
repository = "https://github.com/hkmatsumoto/diaglint"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
codespan-reporting = "0.11"
nom = "7.0"
nom_locate = "4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
